--- a/cuidados.html
+++ b/cuidados.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Cuidados</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"> <!-- Así se une el html con el css-->
 </head>
 <body>
     <header>La Barba</header> <!-- Acá va el encabezado -->
-    <div class="fondobarra">                   <!-- Contenedor donde va el menú de navegación -->
-        <div class="botonhome"><a href="index.html">Home</a></div>
-        <div class="botoncuidados"><a href="cuidados.html">Cuidados</a></div>
-        <div class="botonproductos"><a href="productos.html">Productos</a></div>
+    <div>                   <!-- Contenedor donde va el menú de navegación -->
+        <ul>
+            <div class="botonhome"><a href="index.html">Home</a></div>
+            <div class="botoncuidados"><a href="cuidados.html">Cuidados</a></div>
+            <div class="botonproductos"><a href="productos.html">Productos</a></div>
+        </ul>
     </div>
-
-    
-
+    <div></div>
 
 </body>
 </html>
